welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: ')' expected but ',' found.
	if (talking== true,hour<7){return true}
                          ^parotTrouble:5: error: illegal start of simple expression
}
^